--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             opacity: 1 !important;
             transform: translate(0) scale(1) !important;
         }
+.header { backgroud-color : red; }
       </style>
     </noscript>
   </head>
