--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
             opacity: 1 !important;
             transform: translate(0) scale(1) !important;
         }
-.navbar-nav-lightgray
-{
-background:lightgray;
-}
      </style>
     </noscript>
   </head>
@@ -32,8 +28,7 @@ background:lightgray;
               <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
             </div>
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
-              <ul class="navbar-nav-lightgray" color="lightgray">
-<background color= "lightgray">
+              <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
